# sy-low-value

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  gunicorn.conf.py  manage.py  pyproject.toml  requirements.txt  setup.cfg
app/: admin.py  apps.py  depends.py  tasks.py  tests.py  urls.py
app/controllers/: air_quality.py  ammeter.py  app_version.py  attendance.py  h2s.py  nh3.py  openapi.py  organization.py  passenger_volume.py  sensor.py  staff.py  toilet.py  toilet_comment.py  toilet_seat.py  token.py  toliet_type.py  water_meter.py  wechat.py  work_card.py
app/migrations/: 0001_initial.py  0002_alter_organization_code_alter_organization_level_and_more.py  0003_alter_organization_level_alter_organization_parent.py  0004_remove_organization_level.py  0005_toilettype.py  0006_alter_organization_options_remove_organization_seq_and_more.py  0007_rename_code_sensor_sensor_id_alter_toilet_latitude_and_more.py  0008_alter_toilet_built_at.py  0009_alter_sensor_installation_location_toiletcomment.py  0010_staff.py  0011_sensor_last_communication_time.py  0012_alter_toiletcomment_toilet.py  0013_alter_sensor_sensor_type.py  0014_toilet_manager.py  0015_alter_sensor_toilet.py  0016_agent_ticket.py  0017_remove_ticket_valid_ticket_expired_at_ticket_used.py  0018_alter_ticket_used.py  0019_appversion.py  (+8 more)
infra/: authentication.py  const.py  decorators.py  http_errors.py  permissions.py  renderers.py  schemas.py  utils.py
recycle/: admin.py  apps.py  permissions.py  urls.py
sy_low_value/: asgi.py  urls.py  wsgi.py
tests/: test_smart_toilet.py
(+163 files in other folders)
